--- a/FlashFrancais/FlashFrancais.csproj
+++ b/FlashFrancais/FlashFrancais.csproj
@@ -75,6 +75,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="CardHistoryEntry.cs" />
+    <Compile Include="DataBase.cs" />
     <Compile Include="ParametrizedBooleanToVisibilityConverter.cs" />
     <Compile Include="DelegateCommand.cs" />
     <Compile Include="FlashDeckControl.xaml.cs">
