Finished first pass on SQLite database implementation
Can query database to get decks of cards, add cards, get histories, and other related operations.

--- a/FlashFrancais/FlashFrancais.csproj
+++ b/FlashFrancais/FlashFrancais.csproj
@@ -75,7 +75,8 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="CardHistoryEntry.cs" />
-    <Compile Include="DataBase.cs" />
+    <Compile Include="DataBase\DataBase.cs" />
+    <Compile Include="DataBase\InvalidDataBaseOperationException.cs" />
     <Compile Include="ParametrizedBooleanToVisibilityConverter.cs" />
     <Compile Include="DelegateCommand.cs" />
     <Compile Include="FlashDeckControl.xaml.cs">
