--- a/FlashFrancais/packages.config
+++ b/FlashFrancais/packages.config
@@ -1,6 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AnkiSharp" version="1.3.1" targetFramework="net461" />
+  <package id="Autofac" version="4.9.1" targetFramework="net461" />
+  <package id="CommonServiceLocator" version="2.0.2" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
+  <package id="MvvmLight" version="5.4.1.1" targetFramework="net461" />
+  <package id="MvvmLightLibs" version="5.4.1.1" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
   <package id="System.Data.SQLite" version="1.0.109.2" targetFramework="net461" />
   <package id="System.Data.SQLite.Core" version="1.0.109.2" targetFramework="net461" />
   <package id="System.Data.SQLite.EF6" version="1.0.109.0" targetFramework="net461" />
