--- a/FlashFrancais/FlashFrancais.csproj
+++ b/FlashFrancais/FlashFrancais.csproj
@@ -98,16 +98,19 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="CardHistoryEntry.cs" />
-    <Compile Include="DataBase\SQLiteDatabase.cs" />
     <Compile Include="DataBase\Database.cs" />
     <Compile Include="DataBase\InvalidDataBaseOperationException.cs" />
+    <Compile Include="DataBase\SQLiteDatabase.cs" />
+    <Compile Include="DeckLoaders\AnkiDeckLoader.cs" />
+    <Compile Include="DeckLoaders\CSVDeckLoader.cs" />
+    <Compile Include="DeckLoaders\FlashDeckLoader.cs" />
     <Compile Include="ParametrizedBooleanToVisibilityConverter.cs" />
     <Compile Include="DelegateCommand.cs" />
     <Compile Include="FlashDeckControl.xaml.cs">
       <DependentUpon>FlashDeckControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="Services\GlobalFactory.cs" />
-    <Compile Include="ViewModel\ViewModelLocator.cs" />
+    <Compile Include="ViewModels\ViewModelLocator.cs" />
     <ApplicationDefinition Include="App.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -116,8 +119,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Compile Include="ViewModel\FlashDeckViewModel.cs" />
-    <Compile Include="FlashDeckLoader.cs" />
+    <Compile Include="ViewModels\FlashDeckViewModel.cs" />
     <Compile Include="FlashDeck.cs" />
     <Compile Include="Card.cs" />
     <Compile Include="MainWindow.xaml.cs">
@@ -156,6 +158,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.109.2\build\net46\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.109.2\build\net46\System.Data.SQLite.Core.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
