--- a/FlashFrancais/FlashFrancais.csproj
+++ b/FlashFrancais/FlashFrancais.csproj
@@ -97,16 +97,16 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
-    <Compile Include="CardHistoryEntry.cs" />
+    <Compile Include="Model\CardHistoryEntry.cs" />
     <Compile Include="DataBase\Database.cs" />
     <Compile Include="DataBase\InvalidDataBaseOperationException.cs" />
     <Compile Include="DataBase\SQLiteDatabase.cs" />
     <Compile Include="DeckLoaders\AnkiDeckLoader.cs" />
     <Compile Include="DeckLoaders\CSVDeckLoader.cs" />
     <Compile Include="DeckLoaders\FlashDeckLoader.cs" />
-    <Compile Include="ParametrizedBooleanToVisibilityConverter.cs" />
-    <Compile Include="DelegateCommand.cs" />
-    <Compile Include="FlashDeckControl.xaml.cs">
+    <Compile Include="Helpers\ParametrizedBooleanToVisibilityConverter.cs" />
+    <Compile Include="Helpers\DelegateCommand.cs" />
+    <Compile Include="Views\FlashDeckControl.xaml.cs">
       <DependentUpon>FlashDeckControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="Services\GlobalFactory.cs" />
@@ -115,18 +115,18 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </ApplicationDefinition>
-    <Page Include="MainWindow.xaml">
+    <Page Include="Views\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
     <Compile Include="ViewModels\FlashDeckViewModel.cs" />
-    <Compile Include="FlashDeck.cs" />
-    <Compile Include="Card.cs" />
-    <Compile Include="MainWindow.xaml.cs">
+    <Compile Include="Model\FlashDeck.cs" />
+    <Compile Include="Model\Card.cs" />
+    <Compile Include="Views\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="FlashDeckControl.xaml">
+    <Page Include="Views\FlashDeckControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -158,7 +158,9 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="CardServers\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.109.2\build\net46\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.109.2\build\net46\System.Data.SQLite.Core.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
