--- a/FlashFrancais/FlashFrancais.csproj
+++ b/FlashFrancais/FlashFrancais.csproj
@@ -97,6 +97,8 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="CardServers\CardServer.cs" />
+    <Compile Include="CardServers\SM2CardServer.cs" />
     <Compile Include="Model\CardHistoryEntry.cs" />
     <Compile Include="DataBase\Database.cs" />
     <Compile Include="DataBase\InvalidDataBaseOperationException.cs" />
@@ -106,6 +108,8 @@
     <Compile Include="DeckLoaders\FlashDeckLoader.cs" />
     <Compile Include="Helpers\ParametrizedBooleanToVisibilityConverter.cs" />
     <Compile Include="Helpers\DelegateCommand.cs" />
+    <Compile Include="Services\ConnectionStringProvider.cs" />
+    <Compile Include="Services\FlashDeckProvider.cs" />
     <Compile Include="Views\FlashDeckControl.xaml.cs">
       <DependentUpon>FlashDeckControl.xaml</DependentUpon>
     </Compile>
@@ -158,9 +162,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="CardServers\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.109.2\build\net46\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.109.2\build\net46\System.Data.SQLite.Core.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
