--- a/FlashFrancais/FlashFrancais.csproj
+++ b/FlashFrancais/FlashFrancais.csproj
@@ -128,6 +128,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Views\FlashDeckViewingConfig.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -135,6 +139,9 @@
     <Compile Include="ViewModels\FlashDeckViewModel.cs" />
     <Compile Include="Model\FlashDeck.cs" />
     <Compile Include="Model\Card.cs" />
+    <Compile Include="Views\FlashDeckViewingConfig.xaml.cs">
+      <DependentUpon>FlashDeckViewingConfig.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
